--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
             </div>
 
-            <a href="https://github.com/OmarIbrahim2002" target="_blank">
+            <a href="https://github.com/OmarIbrahim2002?tab=repositories" target="_blank">
                 <button type="button" class="mainBtn transition">GitHub</button>
             </a>
         </div>
