--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style css/Normalize.css">
     <link rel="stylesheet" href="style css/framework.css">
     <link rel="stylesheet" href="style css/main.css">
-    <link rel="icon" href="imgs/omar-circle-close-M-white 2.png">
+    <link rel="icon" href="imgs/omar-circle-close-M-black(BG-WHITE)-2.png">
     <title>Portfolio</title>
 </head>
 <body>
